@@ -9,6 +9,9 @@ glibc (2.29-0experimental2) UNRELEASED; urgency=medium
     have always failed since they have been introduced.
   * debian/control.in/libc: add a Breaks: iraf-fitsutil (<< 2018.07.06-4) to
     libc0.1/0.3/6/6.1. See bug#939523.
+  * debian/testsuite-xfail-debian.mk: drop XFAILs related to the wrong value
+    of (MIN)SIGSTKSZ for 32-bit processes on arm64, now that (old-)stable
+    kernels are fixed.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 03 Sep 2019 21:49:38 +0200
 
